k8s/ministatus/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ministatus-frontend
  namespace: ministatus
spec:
  replicas: 2
  revisionHistoryLimit: 5

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: ministatus-frontend

  template:
    metadata:
      labels:
        app: ministatus-frontend

    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: frontend
          image: 21520623/ministatus-frontend:444368fcfb5e8086da12efdc956d947778dfcdfb
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80
              protocol: TCP

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15

---
apiVersion: v1
kind: Service
metadata:
  name: ministatus-frontend
  namespace: ministatus
spec:
  type: ClusterIP
  selector:
    app: ministatus-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
